tests/neg/syntax_unexpected_top_level_recovery.baa
// EXPECT: متوقع تصريح
// EXPECT: ابدأ التصريح بنوع
// EXPECT-DIAG-COUNT: 1
إرجع 0.
